--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <section>
       <h2>Try It Yourself</h2>
       <p>Click below to experience a mock demo of what CreatiVerse could look like!</p>
-      <a href="file:///C:/Users/bt1it/Desktop/creative%20tech%20demo.html" class="cta-button">Launch Demo</a> <!-- Replace with the actual demo URL -->
+      <a href="creative tech demo.html">Launch Demo</a> <!-- Replace with the actual demo URL -->
     </section>
 
     <!-- AI Music Example -->
@@ -180,7 +180,7 @@
       <h2>Sample AI Music</h2>
       <p>Here’s an example of AI-generated music created by our smart composer tools:</p>
       <iframe height="120" scrolling="no" frameborder="no" allow="autoplay"
-        src="file:///C:/Users/bt1it/Downloads/New%20Composition%20%231.mp3">
+        src="New Composition #1.mp3">
       </iframe>
     </section>
 
@@ -188,9 +188,9 @@
     <section>
       <h2>Creative Work Showcase</h2>
       <div class="gallery">
-        <img src="file:///C:/Users/bt1it/Downloads/2fdf820d-721d-49de-b83d-b4f9214bd8ef.jpg" alt="Art piece 1" />
-        <img src="file:///C:/Users/bt1it/Downloads/47f60cc0-c0ab-42e0-a2ed-766429983022.jpg" alt="Art piece 2" />
-        <img src="file:///C:/Users/bt1it/Downloads/97fbce68-4082-4e08-b558-9c09878afa34.jpg" alt="Art piece 3" />
+        <img src="2fdf820d-721d-49de-b83d-b4f9214bd8ef.jpg" alt="Art piece 1" />
+        <img src="47f60cc0-c0ab-42e0-a2ed-766429983022.jpg" alt="Art piece 2" />
+        <img src="97fbce68-4082-4e08-b558-9c09878afa34.jpg" alt="Art piece 3" />
       </div>
     </section>
 
