--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f9f9f9;
+      background-color: #f9f9f9; /* Light background for body */
       color: #333;
       line-height: 1.6;
     }
 
     header {
-      background: url('your-hero-image.jpg') center/cover no-repeat;
+      background: linear-gradient(135deg, #3a1c71, #d76d77, #ffaf7b); /* Futuristic gradient for header */
       color: white;
       padding: 100px 20px;
       text-align: center;
@@ -29,11 +29,13 @@
     header h1 {
       font-size: 3.5em;
       margin-bottom: 10px;
+      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6); /* Adds shadow to make text stand out */
     }
 
     header p {
       font-size: 1.5em;
-      opacity: 0.8;
+      opacity: 0.9;
+      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5); /* Adds subtle shadow for better readability */
     }
 
     .container {
@@ -75,21 +77,16 @@
     }
 
     .cta-button {
-      background-color: #49a09d; /* Button background color */
-      color: white; /* Text color */
-      padding: 12px 25px; /* Padding around the text */
-      font-size: 16px; /* Font size */
-      border: none; /* No border */
-      border-radius: 8px; /* Rounded corners */
-      cursor: pointer; /* Pointer cursor on hover */
-      text-decoration: none; /* Remove underline */
-      display: inline-block; /* Align inline */
-      margin-top: 20px; /* Add margin above */
-      transition: background-color 0.3s ease; /* Smooth background color transition */
-    }
-
-    .cta-button:hover {
-      background-color: #3b8c86; /* Darker color on hover */
+      background-color: #49a09d;
+      color: white;
+      padding: 12px 25px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 20px;
     }
 
     footer {
@@ -175,7 +172,7 @@
     <section>
       <h2>Try It Yourself</h2>
       <p>Click below to experience a mock demo of what CreatiVerse could look like!</p>
-      <button class="cta-button" onclick="window.location.href='https://your-demo-website.com'">Launch Demo</button>
+      <a href="creative tech demo.html" class="cta-button">Launch Demo</a> <!-- Replace with the actual demo URL -->
     </section>
 
     <!-- AI Music Example -->
