--- a/index.html
+++ b/index.html
@@ -179,9 +179,11 @@
     <section>
       <h2>Sample AI Music</h2>
       <p>Here’s an example of AI-generated music created by our smart composer tools:</p>
-      <iframe height="120" scrolling="no" frameborder="no" allow="autoplay"
-        src="New Composition #1.mp3">
-      </iframe>
+      <audio controls>
+  <source src="New Composition #1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
     </section>
 
     <!-- Image Gallery for Creative Work -->
