--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <h2>Sample AI Music</h2>
       <p>Here’s an example of AI-generated music created by our smart composer tools:</p>
       <audio controls>
-  <source src="New Composition #1.mp3" type="audio/mpeg">
+  <source src="music1.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
