Update creative tech demo.html

--- a/creative tech demo.html
+++ b/creative tech demo.html
@@ -124,17 +124,20 @@
 
     <!-- Interactive Music Player Section -->
     <section>
-      <h2>Experience AI Music</h2>
-      <p>Listen to AI-generated music and explore how tech can help artists create new sounds.</p>
-      <div class="demo-section">
-        <div class="demo-box">
-          <h3>AI Music Demo</h3>
-          <p>Enjoy AI-generated music and get a taste of how technology can compose tracks for you.</p>
-          <!-- You can replace this with a link to an AI music generator or embed a sample from SoundCloud -->
-          <iframe src="file:///C:/Users/bt1it/Downloads/New%20Composition%20%232.mp3" frameborder="no" allow="autoplay"></iframe>
-        </div>
-      </div>
-    </section>
+  <h2>Experience AI Music</h2>
+  <p>Listen to AI-generated music and explore how tech can help artists create new sounds.</p>
+  <div class="demo-section">
+    <div class="demo-box">
+      <h3>AI Music Demo</h3>
+      <p>Enjoy AI-generated music and get a taste of how technology can compose tracks for you.</p>
+      <audio controls>
+        <source src="music2.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+  </div>
+</section>
+
 
     <!-- Conclusion Section -->
     <section>
