--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
       width: 100%;
       border-radius: 10px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      pointer-events: none; /* Prevent click interaction */
+      user-drag: none; /* Disable dragging of images */
     }
 
     @media (max-width: 768px) {
@@ -184,7 +186,6 @@
     Your browser does not support the audio element.
   </audio>
 </section>
-
 
     <!-- Image Gallery for Creative Work -->
     <section>
