--- a/creative tech demo.html
+++ b/creative tech demo.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Creative Tech Demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -14,8 +15,12 @@
       padding: 0;
     }
 
+    html {
+      scroll-behavior: smooth;
+    }
+
     header {
-      background: #49a09d;
+      background: linear-gradient(135deg, #49a09d, #5f2c82);
       color: white;
       padding: 80px 20px;
       text-align: center;
@@ -27,13 +32,13 @@
     }
 
     header p {
-      font-size: 1.2em;
+      font-size: 1.3em;
     }
 
     .container {
       max-width: 1100px;
       margin: 40px auto;
-      padding: 20px;
+      padding: 0 20px;
     }
 
     section {
@@ -55,11 +60,14 @@
       border-radius: 8px;
       cursor: pointer;
       text-decoration: none;
+      transition: 0.3s ease;
       display: inline-block;
     }
 
     .cta-button:hover {
-      background-color: #388f7c;
+      background-color: #3b857e;
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
 
     .demo-section {
@@ -75,27 +83,38 @@
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
       padding: 30px;
       width: 45%;
+      min-width: 300px;
       text-align: center;
     }
 
     iframe {
       width: 100%;
-      height: 400px;
+      height: 220px;
       border-radius: 12px;
       margin-top: 15px;
+      border: none;
     }
 
     footer {
-      background: #333;
+      background: #222;
       color: white;
       text-align: center;
       padding: 30px 20px;
+    }
+
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2.5em;
+      }
+      .demo-box {
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
 
-  <header>
+  <header data-aos="fade-down">
     <h1>Welcome to Creative Tech Demo</h1>
     <p>Experience how technology is transforming creativity in art and music.</p>
   </header>
@@ -103,47 +122,45 @@
   <div class="container">
 
     <!-- About Section -->
-    <section>
+    <section data-aos="fade-up">
       <h2>What is Creative Tech?</h2>
       <p>Creative technology combines the power of innovation with artistic expression, allowing creators to use digital tools to enhance their artwork and music. Here, we showcase how AI and technology are enabling limitless creativity.</p>
     </section>
 
     <!-- AI Art Generator Demo Section -->
-    <section>
+    <section data-aos="fade-up">
       <h2>Try AI-Generated Art</h2>
       <p>Explore AI-generated art and create something unique. Click the button below to try out an AI art tool!</p>
       <div class="demo-section">
-        <div class="demo-box">
+        <div class="demo-box" data-aos="zoom-in">
           <h3>AI Art Generator</h3>
           <p>Create stunning artwork by simply describing what you want to see. Let the AI do the rest!</p>
-          <!-- You can replace this with an actual art generator tool like DeepArt or Artbreeder -->
-          <a href="https://deepdreamgenerator.com" target="_blank" class="cta-button">Try AI Art Generator</a>
+          <a href="https://deepdreamgenerator.com" target="_blank" rel="noopener noreferrer" class="cta-button">Try AI Art Generator</a>
         </div>
       </div>
     </section>
 
     <!-- Interactive Music Player Section -->
-    <section>
-  <h2>Experience AI Music</h2>
-  <p>Listen to AI-generated music and explore how tech can help artists create new sounds.</p>
-  <div class="demo-section">
-    <div class="demo-box">
-      <h3>AI Music Demo</h3>
-      <p>Enjoy AI-generated music and get a taste of how technology can compose tracks for you.</p>
-      <audio controls>
-        <source src="music2.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
-    </div>
-  </div>
-</section>
-
+    <section data-aos="fade-up">
+      <h2>Experience AI Music</h2>
+      <p>Listen to AI-generated music and explore how tech can help artists create new sounds.</p>
+      <div class="demo-section">
+        <div class="demo-box" data-aos="zoom-in">
+          <h3>AI Music Demo</h3>
+          <p>Enjoy AI-generated music and get a taste of how technology can compose tracks for you.</p>
+          <audio controls>
+            <source src="music2.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+        </div>
+      </div>
+    </section>
 
     <!-- Conclusion Section -->
-    <section>
+    <section data-aos="fade-up">
       <h2>Get Involved</h2>
       <p>Creative tech is only the beginning. Join the revolution and start creating your own digital masterpieces today!</p>
-      <a href="https://www.creative-tech.com" target="_blank" class="cta-button">Start Creating Now</a>
+      <a href="https://www.creative-tech.com" target="_blank" rel="noopener noreferrer" class="cta-button">Start Creating Now</a>
     </section>
 
   </div>
@@ -152,5 +169,7 @@
     <p>© 2025 Creative Tech Demo | Empowering the Creators of Tomorrow | Made with ❤️ and Code</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
